<resources>
    <string name="app_name">Sudo</string>
    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="nav_header_title" translatable="true">Android Studio</string>
    <string name="nav_header_subtitle" translatable="true">Lorem Ipsum</string>
    <string name="nav_header_desc" translatable="true">Navigation header</string>
    <string name="nav_settings_desc" translatable="true">Settings</string>
    <string name="action_settings" translatable="true">Settings</string>

    <string name="action_calendar_today" translatable="true">Calendar Today</string>
    <string name="action_hide_events" translatable="true">Hide Events</string>
    <string name="action_show_events" translatable="true">Show Events</string>

    <!-- Preference strings -->
    <string name="pref_title_theme" translatable="true">Theme</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_label" translatable="true">Theme</string>
    <string name="pref_hide_events_key" translatable="false">hide_events</string>

    <!-- Labels for the colour theme ListPreferences -->
    <string name="pref_show_red_theme_label" translatable="true">Red</string>
    <string name="pref_show_blue_theme_label" translatable="true">Blue</string>
    <string name="pref_show_green_theme_label" translatable="true">Green</string>
    <string name="pref_show_purple_theme_label" translatable="true">Purple</string>
    <string name="pref_show_pink_theme_label" translatable="true">Pink</string>
    <string name="pref_show_orange_theme_label" translatable="true">Orange</string>
    <string name="pref_show_mint_theme_label" translatable="true">Mint</string>

    <!-- Keys name for storing colour themes in SharedPreferences -->
    <string name="pref_show_red_theme_key" translatable="false">show_red_theme</string>
    <string name="pref_show_blue_theme_key" translatable="false">show_blue_theme</string>
    <string name="pref_show_green_theme_key" translatable="false">show_green_theme</string>
    <string name="pref_show_purple_theme_key" translatable="false">show_purple_theme</string>
    <string name="pref_show_pink_theme_key" translatable="false">show_pink_theme</string>
    <string name="pref_show_orange_theme_key" translatable="false">show_orange_theme</string>
    <string name="pref_show_mint_theme_key" translatable="false">show_mint_theme</string>


    <string name="pref_show_night_mode_key" translatable="false">show_night_mode</string>
    <string name="pref_show_night_mode_label" translatable="true">Show Night Mode</string>


    <string name="pref_show_night_mode_true" translatable="true">Night Mode On</string>
    <string name="pref_show_night_mode_false" translatable="true">Night Mode Off</string>
    <!-- NavigationView drawer strings -->
        <!-- General layer -->
        <string name="nav_view_overview" translatable="true">Overview</string>
        <string name="nav_view_agenda" translatable="true">Agenda</string>
        <string name="nav_view_calendar" translatable="true">Calendar</string>
        <string name="nav_view_statistics" translatable="true">Statistics</string>

        <!-- User lists layer-->
        <string name="nav_partners" translatable="true">Partners</string>
        <string name="nav_fetishes" translatable="true">Fetishes</string>
        <string name="nav_sex_acts" translatable="true">Sex Acts</string>
        <string name="nav_places" translatable="true">Places</string>
        <string name="nav_positions" translatable="true">Positions</string>

        <!-- User states layer -->
        <string name="nav_view_remove_ads" translatable="true">Remove Ads</string>
        <string name="nav_view_contact_support" translatable="true">Contact Support</string>
        <string name="nav_view_achievements" translatable="true">Achievements</string>
        <string name="nav_view_reminders" translatable="true">Reminders</string>
        <string name="nav_view_password" translatable="true">Password</string>


</resources>


